--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "*.{js,vue}": "eslint"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-book-effects": "^0.4.4",
     "vue-carousel-3d": "^1.0.1"
   },
   "devDependencies": {
